<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.my.screens.MyPasswordChangeFragment">

    <data>

        <variable
            name="viewModel"
            type="com.hyeeyoung.wishboard.presentation.my.MyViewModel" />

        <import type="androidx.navigation.Navigation" />

        <import type="com.hyeeyoung.wishboard.presentation.common.types.ProcessStatus" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/back"
                style="@style/Widget.Button.Icon.Navigation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{(v) -> Navigation.findNavController(v).popBackStack()}"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/Widget.Tab.Detail.TextAppearance.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_section_sub_title_edit_password"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/password_label"
            style="@style/Widget.EditText.Label.Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/my_new_password"
            android:textAppearance="@style/Widget.EditText.Label.TextAppearance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <EditText
            android:id="@+id/password_input"
            style="@style/Widget.EditText.Basic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacingSmall"
            android:hint="@string/my_new_password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textAppearance="@style/Widget.EditText.Basic.TextAppearance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_label">

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/password_re_write_label"
            style="@style/Widget.EditText.Label.Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/my_new_password_re_write"
            android:textAppearance="@style/Widget.EditText.Label.TextAppearance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_input" />

        <EditText
            android:id="@+id/password_re_write_input"
            style="@style/Widget.EditText.Basic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacingSmall"
            android:hint="@string/my_new_password_re_write_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingVertical="@dimen/spacing12"
            android:textAppearance="@style/Widget.EditText.Basic.TextAppearance"
            app:layout_constraintTop_toBottomOf="@id/password_re_write_label" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/complete"
            style="@style/Widget.Button.Full.Round.Activate.Green"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/spacingBase"
            android:onClick="@{() -> viewModel.changePassword()}"
            android:text="@string/complete"
            app:layout_constraintBottom_toBottomOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loading_lottie"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/complete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/complete"
            app:lottie_fileName="lottie/loading_horizontal_black.json"
            app:lottie_imageAssetsFolder="lottie"
            app:lottie_loop="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>