<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.hyeeyoung.wishboard.presentation.folder.screens.TwoOptionDialogFragment">

    <data>

        <variable
            name="topOption"
            type="String" />

        <variable
            name="bottomOption"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/spacingSmall"
        android:paddingBottom="@dimen/spacingSmall"
        tools:background="@color/transparent_700">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_border_radius_16"
            android:backgroundTint="@color/white"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/btn_top_option"
                style="@style/Widget.BottomSheetDialog.Option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{topOption}"
                android:textColor="@color/gray_600"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/folder_name_edit" />

            <View
                android:id="@+id/name_divider"
                style="@style/Widget.Divider"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/btn_top_option" />

            <Button
                android:id="@+id/btn_bottom_option"
                style="@style/Widget.BottomSheetDialog.Option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{bottomOption}"
                android:textColor="@color/pink"
                app:layout_constraintTop_toBottomOf="@id/name_divider"
                tools:text="@string/folder_delete" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel"
            style="@style/Widget.BottomSheetDialog.Option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/cancel"
            android:textColor="@color/gray_600"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/options" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>