<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.sign.screens.SignUpPasswordFragment">

    <data>

        <variable
            name="viewModel"
            type="com.hyeeyoung.wishboard.presentation.sign.SignViewModel" />

        <import type="com.hyeeyoung.wishboard.presentation.sign.SignType" />

        <import type="com.hyeeyoung.wishboard.presentation.common.types.ProcessStatus" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <include
            android:id="@+id/top_app_bar"
            layout="@layout/view_top_app_bar"
            app:title="@{@string/sign_up}" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacingBase"
            android:text="@{@string/step_format(2, 2)}"
            android:textAppearance="@style/TextAppearance.Suit.D2"
            android:textColor="@color/gray_700"
            app:layout_constraintBottom_toBottomOf="@id/top_app_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/top_app_bar"
            tools:text="2/2 단계" />

        <ImageView
            android:id="@+id/password_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacingBase"
            android:src="@drawable/ic_lock"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_app_bar" />

        <TextView
            android:id="@+id/password_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing10"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/lineSpacing"
            android:text="@string/sign_up_password_guide"
            android:textAppearance="@style/TextAppearance.Suit.D2"
            android:textColor="@color/gray_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_icon" />

        <EditText
            android:id="@+id/password_input"
            style="@style/Widget.EditText.Basic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/sign_password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:onTextChanged="@{viewModel::onRegistrationPasswordTextChanged}"
            android:text="@{viewModel.registrationPassword}"
            app:layout_constraintTop_toBottomOf="@id/password_detail">

            <requestFocus />
        </EditText>

        <TextView
            style="@style/Widget.TextAppearance.Detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacingBase"
            android:layout_marginTop="@dimen/spacing5"
            android:text="@string/sign_password_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_input"
            app:visibility="@{viewModel.registrationPassword.length() > 0 &amp;&amp; viewModel.validPasswordFormat == false}" />

        <TextView
            android:id="@+id/sign_term"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacingBase"
            android:layout_marginBottom="@dimen/detailTextSpacing"
            android:gravity="center"
            android:text="@string/sign_term"
            android:textAppearance="@style/TextAppearance.Suit.D3"
            android:textColor="@color/gray_300"
            app:layout_constraintBottom_toTopOf="@id/next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next"
            style="@style/Widget.Button.Full.Round.Activate.Green"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/spacingBase"
            android:enabled="@{viewModel.validPasswordFormat == true}"
            android:onClick="@{() -> viewModel.requestSign(SignType.SIGN_UP)}"
            android:text="@{viewModel.signProcessStatus == ProcessStatus.IN_PROGRESS ? `` : @string/sign_up}"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="@string/sign_up" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loading_lottie"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/next"
            app:lottie_fileName="lottie/loading_horizontal_black.json"
            app:lottie_imageAssetsFolder="lottie"
            app:lottie_loop="true" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>